# BpfChecker

./: .gitignore  README.md  build.sh  run.sh
bpf_ir/: .gitignore  CMakeLists.txt  README.md
bpf_ir/argparse/: argparse.hpp
bpf_ir/disassembler/: CMakeLists.txt  disassembler.cpp
bpf_ir/experimental_fuzzer/: CMakeLists.txt  README.md  combineFuzzer.c  fuzzer.c  fuzzer.h  fuzzerConfig.h
bpf_ir/generator/: AluGenerator.cpp  AluGenerator.h  CMakeLists.txt  Generator.cpp  Generator.h  JmpGenerator.cpp  JmpGenerator.h  MemGenerator.cpp  MemGenerator.h  ProgramGenerator.cpp  SemanticFixer.cpp  rBPFGenerator.cpp  uBPFGenerator.cpp
bpf_ir/generator/include/: ProgramGenerator.h  SemanticFixer.h  Util.h  rBPFGenerator.h  uBPFGenerator.h
bpf_ir/ir/: BasicBlock.cpp  BasicBlock.h  CMakeLists.txt  Instruction.cpp  Instruction.h  Lifter.cpp  Lifter.h  Module.h  ProgramTest.cpp  ProgramTest.h  Semantics.h  Template.h  bpf-instruction.h  common.h  ir.h
bpf_ir/ir/test/: CMakeLists.txt  InstructionTest.cpp
bpf_ir/ir/util/: bpf_header.h  irDump.cpp  irDump.h
bpf_ir/mutator/: CMakeLists.txt  config.h  custom_mutator.cpp  mutator.cpp  mutator.h  mutatorTest.cpp  operation.h  randomEngine.h
bpf_ir/randomizer/: CMakeLists.txt  Randomizer.hpp  RandomizerConst.hpp
bpf_ir/script/: README.md  build_lkl.sh
bpf_ir/stale/: lkl_load.c  native_load.c
evaluation/: manager.py  metric_calculator.py  run_wrapper.py
rbpf_runner/: .gitmodules  Cargo.toml  README.md
rbpf_runner/src/: assembler_engine.rs  main.rs  usage_test.rs
rbpf_runner/src/rbpf/: Cargo.toml  README.md
rbpf_runner/src/rbpf/.github/workflows/: main.yml
rbpf_runner/src/rbpf/benches/: elf_loader.rs  jit_compile.rs  memory_mapping.rs  vm_execution.rs
rbpf_runner/src/rbpf/cli/: Cargo.toml
rbpf_runner/src/rbpf/cli/src/: main.rs
rbpf_runner/src/rbpf/examples/: disassemble.rs  to_json.rs
rbpf_runner/src/rbpf/fuzz/: Cargo.toml
rbpf_runner/src/rbpf/fuzz/fuzz_targets/: common.rs  dumb.rs  smart.rs  smart_jit_diff.rs  smarter_jit_diff.rs  verify_semantic_aware.rs
rbpf_runner/src/rbpf/src/: assembler.rs  call_frames.rs  disassembler.rs  ebpf.rs  elf.rs  error.rs  helpers.rs  insn_builder.rs  jit.rs  lib.rs  memory_region.rs  static_analysis.rs  syscalls.rs  verifier.rs  vm.rs
rbpf_runner/src/rbpf/test_utils/: Cargo.toml
rbpf_runner/src/rbpf/test_utils/src/: lib.rs
rbpf_runner/src/rbpf/tests/: assembler.rs  disassembler.rs  misc.rs  ubpf_execution.rs  ubpf_verifier.rs
rbpf_runner/src/rbpf/tests/elfs/: elfs.sh  rodata.c
ubpf_runner/: .gitignore  CMakeLists.txt  README.md  parser_fuzzer.cpp  runner_fuzzer.cpp  ubpf_runner.cpp  update_dependency.sh  verifier_fuzzer.cpp  verifier_fuzzer_repro.cpp
ubpf_runner/runner/: CMakeLists.txt  attestation.cpp  elf.h  endian.h  runner_core.cpp  runner_core.h
ubpf_runner/runner/utils/: argparse.hpp  utils.cpp  utils.h
ubpf_runner/script/: patch.diff  triage.py
ubpf_runner/ubpf/vm/: ubpf_vm.c
