[package]
name = "rbpf_runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#solana_rbpf = "0.2.14"
solana_rbpf = { path = "src/rbpf"}
rand = { version = "0.7.3", features = ["small_rng"]}
clap = "3.1.2"